--- a/экз.ipynb
+++ b/экз.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNNVOshWPzd8sdBD7GT70x+",
+      "authorship_tag": "ABX9TyODgPIyEKJtzIEcwk1pSlMs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -219,20 +219,20 @@
         "import pandas as pd\n",
         "import statsmodels.api as sm\n",
         "\n",
-        "# Load data\n",
+        "# Загрузка данных\n",
         "df = pd.read_excel('Данные для задания.xlsx', sheet_name='Данные')\n",
         "\n",
-        "# Select independent variables and dependent variable\n",
+        "# Выбор независимых переменных и зависимой переменной\n",
         "X = df[['Wages', 'WorkAge', 'SecEdu','HighEdu', 'HighStudent', 'University', 'Popul']]\n",
         "y = df['SecStudent']\n",
         "\n",
-        "# Add constant to the model\n",
+        "# Добавление константы\n",
         "X = sm.add_constant(X)\n",
         "\n",
-        "# Build the linear regression model\n",
+        "# Построение линейной регрессионной модели\n",
         "model = sm.OLS(y, X).fit()\n",
         "\n",
-        "# Display the summary of the model\n",
+        "# Отображение сводки модели\n",
         "print(model.summary())\n"
       ],
       "metadata": {
@@ -473,6 +473,15 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "aaW2uPKyX66-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "1. Центры кластеров:\n",
@@ -497,8 +506,8 @@
         "\n",
         "Кластер 1: 82 региона (остальные регионы РФ).\n",
         "\n",
-        "3. Можно ли утверждать, что города федерального значения отличаются от других регионов РФ?\n",
-        "Да, можно утверждать, что города федерального значения статистически значимо отличаются от других регионов РФ. Это подтверждается следующими наблюдениями:\n",
+        "**Можно ли утверждать, что города федерального значения отличаются от других регионов РФ?**\n",
+        "Да, можно утверждать, что города федерального значения статистически значимо отличаются от других регионов РФ. Это подтверждается следующим:\n",
         "\n",
         "Центры кластеров:\n",
         "\n",
@@ -516,10 +525,7 @@
         "\n",
         "Визуализация:\n",
         "\n",
-        "На графике кластеризации (например, scatter plot или PCA) города федерального значения явно отделены от остальных регионов.\n",
-        "\n",
-        "Статистическая значимость:\n",
-        "\n",
+        "На графике кластеризации города федерального значения явно отделены от остальных регионов.\n",
         "Различия между кластерами настолько значительны, что можно утверждать, что города федерального значения образуют отдельную группу."
       ],
       "metadata": {
@@ -737,12 +743,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "dULRWS4dOhde",
-        "outputId": "8c7cca14-d791-4081-8595-f9c6841da0a6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "dULRWS4dOhde",
+        "outputId": "8c7cca14-d791-4081-8595-f9c6841da0a6"
       },
       "execution_count": 162,
       "outputs": [
@@ -812,7 +818,7 @@
         "\n",
         "Визуализация данных:\n",
         "\n",
-        "На графике PCA или scatter plot города федерального значения явно отделены от остальных регионов, что подтверждает их уникальность.\n",
+        "На графике PCA города федерального значения явно отделены от остальных регионов, что подтверждает их уникальность.\n",
         "\n",
         "Статистическая значимость:\n",
         "\n",
@@ -820,7 +826,7 @@
         "\n",
         "Результаты моделей машинного обучения:\n",
         "\n",
-        "Все модели (логистическая регрессия, случайный лес, SVM, XGBoost) показывают высокие метрики (Accuracy, F1-score, ROC-AUC), что подтверждает эффективность разделения городов федерального значения и остальных регионов.\n",
+        "Все модели показывают высокие метрики, что подтверждает эффективность разделения городов федерального значения и остальных регионов.\n",
         "\n",
         "ROC-AUC = 1.00 для некоторых моделей указывает на идеальное разделение классов.\n",
         "\n",
